# ethansr.github.io

./: .gitignore  LICENSE  about.html  about.rst  archive.html  bibliography.html  contact.html  contact.markdown  default.css  deploy.sh  ethansr.cabal  index.htm  index.html  index.md  o.html  publish.sh  site.hs
bib/: research.bib
categories/: bibliography.html
css/: default.css  main.css
images/: side_cropped.png.sb-207fac72-duqGyw
js/: fancy.js
posts/: 2015-08-23-example.markdown  2015-08-24-example.markdown
posts/bibliography/: 2013-10-25-probability-theory.html  2013-10-25-probability-theory.markdown  2014-11-10-revision.html  2014-11-10-revision.markdown  2014-12-10-elm.html  2014-12-10-elm.markdown  2015-10-10-dedalus.html  2015-10-10-dedalus.markdown  2016-01-01-mackinlay.html  2016-01-01-mackinlay.markdown  2016-03-04-rashoman.html  2016-03-04-rashoman.markdown  2016-09-14-cleveland.html  2016-09-14-cleveland.markdown
projects/: poeme.html  poeme.md
templates/: about.html  contact.html  default.html  ga.html  post-list.html  post.html
