name:                ethansr
version:             0.1.0.0
synopsis:            Ethan Soutar-Rau's web site
description:         Please see README.md
homepage:            https://github.com/githubuser/ethansr#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Soutar-Rau
maintainer:          ethan.soutar.rau@gmail.com
copyright:           2016 Ethan Soutar-Rau
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       hakyll == 4.9.5.1,
                       base == 4.9.1.0
